# scb

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
data/: emojis.json  moodle-courses.json  uni-links.json
data/locale/: de.json
scb/: __init__.py  __main__.py  bot.py  client.py  config.py
scb/cogs/: about.py  fun.py  profile.py  reaction.py  status.py  tictac.py  websites.py
