[tool.poetry]
name = "scb"
version = "0.1.0"
description = "Discord Bot für den Systems Engineering Server der UDE"
authors = ["chr3st5an <chr3st5an.jc2yv@slmail.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
disnake = "^2.6.0"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
