[tool.poetry]
name = "scb"
version = "0.1.0"
description = "Discord Bot für den Systems Engineering Server der UDE"
authors = ["chr3st5an <chr3st5an.jc2yv@slmail.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
disnake = "^2.6.0"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
flake8 = {version = "^5.0.4", optional = true}
black = {version = "^22.10.0", optional = true}
isort = {version = "^5.10.1", optional = true}

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
from_first = true
lines_after_imports = 2
length_sort = true
line_length = 120
skip_gitignore = true
use_parentheses = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
